[package]
name = "rust_game"
version = "0.1.0"
authors = ["Hristiyan Genchev <genchev99@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.6"
rand = "0.8.4"
glam = "0.18.0"
serde_json = "1.0.59"
